# libraries

./: .gitignore  3e574858-10e6-4f07-a006-e91ef43ff928.go  LICENSE  README.md  openapi_detect copy.yaml  openapi_detect.yaml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: cucumber-javascript.yaml  cucumber-python.yaml  dropper-eu1.yml  dropper-us1.yml  dropper-us2.yml  hades-dev.yaml  hades-prod.yaml  hades-prod.yml  hades-staging.yml  install-dev.yml  install-prod.yml  moonlight-alphas.yaml  moonlight-dev.yaml  moonlight-prod.yaml  moonlight-prod.yml  moonlight-staging.yml  presto-dev.yaml  presto-dev.yml  presto-prod.yaml  presto-prod.yml  presto-staging.yml  pylint.yml  release-alpha.yml  release-beta.yml  release.yml  shell_probes-eu1.yml  shell_probes-platform-us-east-1.yml  shell_probes-prod.yml  shell_probes-scoot-sbx.yml  shell_probes-staging.yml  shell_probes-us1.yml  shell_probes-us2.yml
container/dockerfile/: Dockerfile  README.md  entrypoint.sh
container/extension/: .gitignore  Dockerfile  Makefile  README.md  metadata.json
endpoint/: endpoint.go
go/probe/: README.md  go.mod
javascript/sdk/: .env.test  .gitignore  README.md  index.html  package-lock.json  package.json  service.js  tsconfig.json  vite.config.ts
moonlight/: Package.swift  README.md
moonlight/allegro/: Makefile  README.md
powershell/probe/: README.md  raindrop.ps1
python/cli/: 39b92fd1-2670-4715-8d65-28a47e162577.go  MANIFEST.in  README.md  setup.cfg
python/cli/detect_cli/: cli.py
python/cli/detect_cli/views/: account.py  configure.py  database.py  endpoint.py  endpoints.py  manifest.py  schedule.py
python/cli/docs/: 324829a8-9ba9-4559-9b97-4e4cc0cc3bf4.c  324829a8-9ba9-4559-9b97-4e4cc0cc3bf4.swift
python/cli/prelude_cli/: cli.py  keychain.py  profile.py
python/cli/prelude_cli/objects/: link.py
python/cli/prelude_cli/templates/: README.md  template.c  template.cs  template.go  template.ps1  template.rs  template.sh  template.swift
python/cli/prelude_cli/views/: account.py  auth.py  build.py  compute.py  configure.py  database.py  detect.py  generate.py  iam.py  interactive.py  jobs.py  partner.py  scm.py  shared.py  sso.py  wizard.py
python/install/: install.py
python/probe/: LICENSE  README.md  presto.py  setup.cfg
python/probe/detect_probe/: presto.py  service.py
python/sdk/: README.md  nocturnal.sh  setup.cfg
python/sdk/detect_sdk/controllers/: account_controller.py  database_controller.py  endpoint_controller.py  endpoints_controller.py  manifest_controller.py  schedule_controller.py
python/sdk/prelude_sdk/: spinner.py
python/sdk/prelude_sdk/controllers/: account_controller.py  build_controller.py  compute_controller.py  database_controller.py  detect_controller.py  export_controller.py  generate_controller.py  http_controller.py  iam_controller.py  jobs_controller.py  partner_controller.py  probe_controller.py  scm_controller.py
python/sdk/prelude_sdk/models/: account.py  codes.py
python/sdk/tests/: README.md  conftest.py  requirements.txt  test_build.py  test_build_controller.py  test_cleanup.py  test_detect.py  test_detect_controller.py  test_export.py  test_generate.py  test_iam.py  test_iam_controller.py  test_partner.py  test_partner_controller.py  test_policy_evaluator.py  test_probe.py  test_scm.py  test_scm_build.py  test_setup.py  testutils.py
python/sdk/tests/advanced/: test_build_adv.py  test_generate.py  test_partner.py  test_probe.py  test_scm.py
python/sdk/tests/basic/: test_build.py  test_detect.py  test_iam.py  test_scm_build.py
python/sdk/tests/templates/: template.go
shell/demo/: demo.ps1  demo.sh  demo1.ps1  demo1.sh  demo2.ps1  demo2.sh  demo3.ps1  demo3.sh  demo4.ps1  (+4 more)
tests/: README.md  package.json  requirements.txt
(+126 files in other folders)
