[metadata]
name = prelude-cli
version = 1.7.3
author = Prelude Research
author_email = support@preludesecurity.com
description = For interacting with the Prelude SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/preludeorg
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    prelude-sdk == 1.7.1
    click > 8
    rich
    python-dateutil
[options.entry_points]
console_scripts =
    prelude = prelude_cli.cli:cli
