[metadata]
name = prelude-cli
version = 2.6.10
author = Prelude Research
author_email = support@preludesecurity.com
description = For interacting with the Prelude SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/preludeorg
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    prelude-sdk == 2.6.37
    click > 8
    rich
    python-dateutil
    pyyaml
[options.entry_points]
console_scripts =
    prelude = prelude_cli.cli:cli
    prelude-beta = prelude_cli_beta.cli:cli
