[metadata]
name = detect-probe
version = 0.9.22
author = Prelude Research
author_email = support@prelude.org
description = A Prelude Probe for Detect
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/preludeorg
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.8
