[metadata]
name = prelude-sdk
version = 1.5.3
author = Prelude Research
author_email = support@preludesecurity.com
description = For interacting with the Prelude API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/preludeorg
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests
